--- a/app.json
+++ b/app.json
@@ -1,1 +1,1 @@
-{"id":"9a645ae0-16c6-11e2-89d0-073388f3ce00","js":[{"path":"sdk/sencha-touch.js","type":"js"},{"path":"app.js","bundle":true,"update":"delta","type":"js"}],"css":[{"path":"resources/css/app.css","update":"delta","type":"css"},{"path":"resources/css/additional.css","update":"delta","type":"css"}]}
+{"id":"9a645ae0-16c6-11e2-89d0-073388f3ce00","js":[{"path":"app.js","bundle":true,"update":"delta","type":"js"}],"css":[{"path":"resources/css/app.css","update":"delta","type":"css"},{"path":"resources/css/additional.css","update":"delta","type":"css"}]}
